--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -25,3 +25,37 @@ nav {
   nav ul li a:hover {
     background-color: #555;
   }
+
+  #cambiar-cuenta{
+    float: right;
+  }
+
+  /*.container {
+    position: relative;
+    width: 100%;
+    height: 100px; Ajusta la altura según tus necesidades 
+  }
+  
+  .cambiar-cuenta {
+    position: absolute;
+    right: 0; Mueve el botón hacia la derecha 
+  }*/
+
+  .texto-primario{
+    color: white;
+}
+.texto-secundario{
+    background:rgb(39, 160, 76);
+}
+.texto-resaltado{
+    color: green;
+}
+.fondo-primario{
+    background:rgb(222, 253, 232);
+}
+.fondo-secundario{
+    background:rgb(39, 160, 76);
+}
+.fondo-resaltado{
+    color: green;
+}
