--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,35 +1,34 @@
-<!-- <!DOCTYPE html>
-<html>
+<div class="texto-secundario">
+  <nav class="navbar navbar-expand-sm bg-white">
+    <div class="container-fluid">
+      <ul class="navbar-nav ml-auto w-100" >
+        <li class="nav-item">
+          <a class="nav fondo-secundario active" routerLink="movimientos">Movimientos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav fondo-secundario" routerLink="operaciones">Transferencias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav fondo-secundario" routerLink="productos">Productos Asociados</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav fondo-secundario" routerLink="detalles">Ajustes de la Cuenta</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav fondo-secundario dropdown-toggle row justify-content-end" href="#" role="button" data-bs-toggle="dropdown"
+            id="cambiar-cuenta">CAMBIAR DE CUENTA</a>
+        </li>
 
-<head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+        <!-- <li class="dropdown resalte lead open">
+					<a title="Contacta" href="/campusvirtual/contacto" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Contacta</a>
+					<ul class="dropdown-menu" role="menu">
+						<li><a title="Personal UCM y Estudiantes<br/>" href="http://www.ucm.es/ssii/atencion-al-usuario">Personal UCM y Estudiantes<br></a></li>
+						<li><a title="Coordinadores y Gestores" href="/campusvirtual/coordinadores-y-gestores">Coordinadores y Gestores</a></li>
+						<li><a href="/campusvirtual/contacto" title="Contacta" aria-label="Contacta"><span class="fa fa-plus-circle" aria-hidden="true" title="Contacta"><em class="mas">+</em></span></a></li>
+					</ul>
+				</li> -->
 
-<body> -->
-    <nav class="navbar navbar-expand-sm navbar-light">
-        <div class="container-fluid">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Movimientos</a>
-              </li>
-             <li class="nav-item">
-                <a class="nav-link" href="#">Transferencias</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Productos Asociados</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Ajustes de la Cuenta</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">CAMBIAR DE CUENTA</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-<!-- 
-</body>
-
-</html> -->
+      </ul>
+    </div>
+  </nav>
+</div>
