--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -308,19 +308,18 @@
     opacity: 0;
 }
 .modalConectando {
-    opacity: 0.5;
-    background: #fff;
+    opacity: 1;
+    background: rgba(255, 255, 255, 0.486);
     position: absolute;
-    min-height: 100vh;
-    min-width: 100vw;
+    height: 100vh;
+    width: 100vw;
     z-index: 1000;
-    border-radius: 4px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
+    /* border-radius: 4px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.9); */
     overflow: hidden;
 }
 .contenedorModal{
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
-    opacity: 1;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);    
     background: white;
     display: flex;
     align-items: center;
