--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -302,7 +302,11 @@
 .contenido .sinBorde {
     border-radius: 0px;
 }
-
+.bloqueado{
+    position: relative;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
 .oculto{
     display: none;
     opacity: 0;
