--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
             data-bs-target="#exampleModal">
             15/05/2023 01:54
         </button>
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="false">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -121,7 +121,7 @@
                         <path d="M8 11v-4a4 4 0 1 1 8 0v4"></path>
                         <path d="M19 16v3"></path>
                         <path d="M19 22v.01"></path>
-                    </svg>El Usuario o la Clave introducidos son incorrectos</p>
+                    </svg>El Usuario o la Clave introducidos no son correctos</p>
                 </div>
                 <ng-template #mensaje>
                     <p class="mt-2"><svg xmlns="http://www.w3.org/2000/svg"
