--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,6 +5,7 @@
   </header>
 
   <main>
+    <div class="container-fluid">
     <div class="container">
       <section class="jumbotron text-center text-white texto-resaltado">
         <div class="container">
@@ -22,14 +23,14 @@
             <p>Una forma gratuita de traer tus ingresos y tus recibos,<br> tus cuentas de otros bancos, sin papeleos y
               estrés<br>
               <a>¡Hazte Cliente!</a>
-            </p>
+            </p><br>
           </div>
-          <div class="col-md-6 mb-4 movimiento-online">
+          <div class="col-md-6 mb-4 imagen-online">
             
           </div>
         </div>
       </section>
-    </div>
+    </div><br>
   
     <div class="container">
       <section class="container text-white texto-resaltado">
@@ -43,7 +44,25 @@
             </div>
           </div>
           <div class="col-md-6 mb-4">
-            <div class="movimiento-objeto1"></div>
+            <div class="imangen-prueba3"></div>
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="fondo-primario">
+      <section class="container text-white texto-resaltado">
+        <div class="row">
+          <div class="col-md-6 mb-4" style="color: green;">
+           <ul id="letra">
+            <li>disfruta de lo que mas te gusta</li><br>
+            <li>sin preocupasiones</li><br>
+            <li>sin cargas extras en tu CUENTA</li><br>
+            <li>TU  FELICIDAD ES LA NUESTRA </li><br>
+           </ul>
+           
+          </div>
+          <div class="col-md-6 mb-4">
+            <div class="imagen-felices"></div>
           </div>
         </div>
       </section>
@@ -54,6 +73,7 @@
       <h2>en menos de diez minutos lo puedes hacer!</h2>
       <a class="btn btn-light btn-lg" href="#" role="button">¡Hazte Cliente!</a>
     </div>
+  </div>
   </main>
   
   <footer>
