if logado navbar & tempInactividad

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,4 @@
-<app-login></app-login>
-<app-navbar></app-navbar>
+<header class="mb-5">
+    <app-login></app-login>
+    <app-navbar *ngIf="logado"></app-navbar>
+</header>
