--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div>
     <footer class="py-1 text-bg-dark  fixed-bottom">
 
-        <div class="col-md-5 offset-md-6 ">
+         <div class="col-md-5 offset-md-6 ">
             <form>
                 <h5>Suscripcion boletin informativo</h5>
                 <p>Informacion mensual de nuestros productos y ofertas</p>
@@ -16,7 +16,18 @@
 
             <p>© 2023 PortalentoDigital, Inc. Derechos Reservados</p>
 
-        </div>
+        </div> 
 
-    </footer>
+    <!-- </footer>
 </div>
+<footer>
+    <mat-toolbar color="primary">
+      <span>© {{ currentYear }} Mi Sitio Web</span>
+      <span class="fill-remaining-space"></span>
+      <a mat-button href="https://miweb.com">Inicio</a>
+      <a mat-button href="https://miweb.com/acerca">Acerca de</a>
+      <a mat-button href="https://miweb.com/contacto">Contacto</a>
+      <a mat-button href="https://springboot.com">Spring Boot</a>
+    </mat-toolbar>
+  </footer>
+   -->
