--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,34 +1,69 @@
 <div class="texto-secundario">
   <nav class="navbar navbar-expand-sm bg-white">
     <div class="container-fluid">
-      <ul class="navbar-nav ml-auto w-100" >
+      <ul class="navbar-nav ml-auto w-100">
+
         <li class="nav-item">
           <a class="nav fondo-secundario active" routerLink="movimientos">Movimientos</a>
         </li>
+
         <li class="nav-item">
           <a class="nav fondo-secundario" routerLink="operaciones">Transferencias</a>
         </li>
+
         <li class="nav-item">
           <a class="nav fondo-secundario" routerLink="productos">Productos Asociados</a>
         </li>
+
         <li class="nav-item">
           <a class="nav fondo-secundario" routerLink="detalles">Ajustes de la Cuenta</a>
         </li>
-        <li class="nav-item">
-          <a class="nav fondo-secundario dropdown-toggle row justify-content-end" href="#" role="button" data-bs-toggle="dropdown"
-            id="cambiar-cuenta">CAMBIAR DE CUENTA</a>
-        </li>
 
-        <!-- <li class="dropdown resalte lead open">
-					<a title="Contacta" href="/campusvirtual/contacto" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Contacta</a>
-					<ul class="dropdown-menu" role="menu">
-						<li><a title="Personal UCM y Estudiantes<br/>" href="http://www.ucm.es/ssii/atencion-al-usuario">Personal UCM y Estudiantes<br></a></li>
-						<li><a title="Coordinadores y Gestores" href="/campusvirtual/coordinadores-y-gestores">Coordinadores y Gestores</a></li>
-						<li><a href="/campusvirtual/contacto" title="Contacta" aria-label="Contacta"><span class="fa fa-plus-circle" aria-hidden="true" title="Contacta"><em class="mas">+</em></span></a></li>
-					</ul>
-				</li> -->
+        <div class="btn-group">
+          <button type="button" class="btn btn-danger">CAMBIAR DE CUENTA</button>
+
+          <button type="button" class="btn btn-danger bropdown-toggle
+          data-toggle=dropdown">
+        <span class="caret"></span>
+        <span class="sr-only">Desplegar menú</span>
+      </button>
+
+      <!-- <ul class="dropdown-menu" role="menu">
+        <li><a href="#">Cuenta 1</a></li>
+        <li><a href="#">Cuenta 2</a></li>
+        <li><a href="#">Cuenta 3</a></li>
+      </ul> -->
+        </div>
+
+        <!-- <li class="nav-item dropdown">
+          <a class="nav fondo-secundario dropdown-toggle row justify-content-end" href="#" role="button"
+            data-bs-toggle="dropdown" id="cambiar-cuenta">CAMBIAR DE CUENTA</a> -->
+            <ul class="dropdown-menu" role="menu" id="cambiar-cuenta-menu">
+              <li><a class="dropdown-item" href="#">Cuenta 1</a></li>
+              <li><a class="dropdown-item" href="#">Cuenta 2</a></li>
+              <li><a class="dropdown-item" href="#">Cuenta 3</a></li>
+            </ul>  
+        <!-- </li> -->
 
       </ul>
     </div>
   </nav>
 </div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function(){
+    var cambiarCuentaBtn = document.getElementById('cambiar-cuenta');
+    var cambiarCuentaMenu = document.getElementById('cambiar-cuenta-menu');
+
+    cambiarCuentaBtn.addEventListener('click', function(event){
+      event.stopPropagation();
+      cambiarCuentaMenu.classList.toggle('show');
+    });
+
+    document.addEventListener('click', function(event){
+      if (!cambiarCuentaMenu.contains(event.target)){
+        cambiarCuentaMenu.classList.remove('show');
+      }
+    });
+    });
+</script>
