--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,6 +9,9 @@
         </div>
     </div>
 </div>
+<div>
+    
+</div>
 <div class="cabecera texto-primario fondo-secundario">
     <div class="logoCabecera" routerLink="landing">
         <span>
