--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,81 +1,79 @@
-<body class="fondo-secundario">
 
-  <header>
-    <!-- Aquí puedes agregar el encabezado de tu landing -->
-  </header>
 
-  <main>
-    <div class="container-fluid">
-    <div class="container">
-      <section class="jumbotron text-center text-white texto-resaltado">
-        <div class="container">
-          <h1 class="display-4">¡Bienvenido al banco de tus sueños!</h1><br>
-          <p class="lead">LA CUENTA QUE SE ADAPTA A TU VIDA</p>
-        </div>
-      </section>
-    </div><br>
-  
-    <div class="container">
-      <section class="container text-white texto-resaltado">
-        <div class="row">
-          <div class="col-md-6 mb-4">
-            <h2>Con el Servicio Cambio de Banco <br> haremos la gestión por ti</h2>
-            <p>Una forma gratuita de traer tus ingresos y tus recibos,<br> tus cuentas de otros bancos, sin papeleos y
-              estrés<br>
-              <a>¡Hazte Cliente!</a>
-            </p><br>
+
+ 
+    <div class="container fondo-secundario">
+      <div class="container">
+        <section class="jumbotron text-center text-white texto-resaltado">
+          <div class="container">
+            <h1 class="display-4">¡Bienvenido al banco de tus sueños!</h1><br>
+            <p class="lead">LA CUENTA QUE SE ADAPTA A TU VIDA</p>
           </div>
-          <div class="col-md-6 mb-4 imagen-online">
-            
-          </div>
-        </div>
-      </section>
-    </div><br>
-  
-    <div class="container">
-      <section class="container text-white texto-resaltado">
-        <div class="row">
-          <div class="col-md-6 mb-4">
-            <h2>CONECTADO SIEMPRE CONTIGO</h2>
-            <p>365 días del año siempre estaremos a tu disposición</p><br>
-            <div>
-              <div class="percentage text-start">0%</div>
-              <p class="text-center" id="number">de Interés</p>
+        </section>
+      </div><br>
+
+      <div>
+        <section class="container text-white texto-resaltado">
+          <div class="row">
+            <div class="col-md-6 mb-4">
+              <h2>Con el Servicio Cambio de Banco <br> haremos la gestión por ti</h2>
+              <p>Una forma gratuita de traer tus ingresos y tus recibos,<br> tus cuentas de otros bancos, sin papeleos y
+                estrés<br>
+                <a>¡Hazte Cliente!</a>
+              </p><br>
+            </div>
+            <div class="col-md-6 mb-4">
+              <img src="assets/online.jpg " class="img-fluid rounded"  style="width: 300px; height: 200px; ">
+
             </div>
           </div>
-          <div class="col-md-6 mb-4">
-            <div class="imangen-prueba3"></div>
+        </section>
+      </div><br>
+
+      <div class="container">
+        <section class="container text-white texto-resaltado">
+          <div class="row">
+            <div class="col-md-6 mb-4">
+              <h2>CONECTADO SIEMPRE CONTIGO</h2>
+              <p>365 días del año siempre estaremos a tu disposición</p><br>
+              <div>
+                <div class="porcentage text-start">0%</div>
+                <p class="text-center" id="number">de Interés</p>
+              </div>
+            </div>
+            <div class="col-md-6 mb-4">
+              <img src="assets/prueba3.jpg " class="img-fluid rounded"  style="width: 300px; height: 200px; ">
+            </div>
           </div>
-        </div>
-      </section>
-    </div>
-    <div class="fondo-primario">
-      <section class="container text-white texto-resaltado">
-        <div class="row">
-          <div class="col-md-6 mb-4" style="color: green;">
-           <ul id="letra">
-            <li>disfruta de lo que mas te gusta</li><br>
-            <li>sin preocupasiones</li><br>
-            <li>sin cargas extras en tu CUENTA</li><br>
-            <li>TU  FELICIDAD ES LA NUESTRA </li><br>
-           </ul>
-           
+        </section>
+      </div>
+      <div class= "container fondo-primario">
+        <section class="container  text-white texto-resaltado">
+          <div class="row conta" >
+            <div class="col-md-5 mb-9" style="color: green;">
+              <ul id="letra"><br>
+                <li>disfruta de lo que mas te gusta</li><br>
+                <li>sin preocupasiones</li><br>
+                <li>siemrpe a tu disposición</li><br>
+                <li>sin cargas extras en tu CUENTA</li><br>
+                <li>TU FELICIDAD ES LA NUESTRA </li><br>
+              </ul>
+
+            </div>
+            <div class="col-md-5 mb-9"><br><br>
+              <div class="d-flex justify-content-end align-items-center">
+                <img src="assets/felices.jpg" class="img-fluid rounded"  style="width: 400px; height: 300px; " >
+              </div>
+            </div>
           </div>
-          <div class="col-md-6 mb-4">
-            <div class="imagen-felices"></div>
-          </div>
-        </div>
-      </section>
+        </section>
+      </div>
+
+      <div class="container-fluid p-5 text-white text-center texto-resaltado">
+        <h1>LA QUIERES YA</h1>
+        <h2>en menos de diez minutos lo puedes hacer!</h2>
+        <a class="btn btn-light btn-lg" href="#" role="button">¡Hazte Cliente!</a>
+      </div>
     </div>
   
-    <div class="container-fluid p-5 text-white text-center texto-resaltado">
-      <h1>LA QUIERES YA</h1>
-      <h2>en menos de diez minutos lo puedes hacer!</h2>
-      <a class="btn btn-light btn-lg" href="#" role="button">¡Hazte Cliente!</a>
-    </div>
-  </div>
-  </main>
-  
-  <footer>
-    <!-- Aquí puedes agregar el pie de página de tu landing -->
-  </footer>
+
