--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,69 +1,19 @@
-<div class="texto-secundario">
-  <nav class="navbar navbar-expand-sm bg-white">
-    <div class="container-fluid">
-      <ul class="navbar-nav ml-auto w-100">
-
-        <li class="nav-item">
-          <a class="nav fondo-secundario active" routerLink="movimientos">Movimientos</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav fondo-secundario" routerLink="operaciones">Transferencias</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav fondo-secundario" routerLink="productos">Productos Asociados</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav fondo-secundario" routerLink="detalles">Ajustes de la Cuenta</a>
-        </li>
-
-        <div class="btn-group">
-          <button type="button" class="btn btn-danger">CAMBIAR DE CUENTA</button>
-
-          <button type="button" class="btn btn-danger bropdown-toggle
-          data-toggle=dropdown">
-        <span class="caret"></span>
-        <span class="sr-only">Desplegar menú</span>
-      </button>
-
-      <!-- <ul class="dropdown-menu" role="menu">
-        <li><a href="#">Cuenta 1</a></li>
-        <li><a href="#">Cuenta 2</a></li>
-        <li><a href="#">Cuenta 3</a></li>
-      </ul> -->
-        </div>
-
-        <!-- <li class="nav-item dropdown">
-          <a class="nav fondo-secundario dropdown-toggle row justify-content-end" href="#" role="button"
-            data-bs-toggle="dropdown" id="cambiar-cuenta">CAMBIAR DE CUENTA</a> -->
-            <ul class="dropdown-menu" role="menu" id="cambiar-cuenta-menu">
-              <li><a class="dropdown-item" href="#">Cuenta 1</a></li>
-              <li><a class="dropdown-item" href="#">Cuenta 2</a></li>
-              <li><a class="dropdown-item" href="#">Cuenta 3</a></li>
-            </ul>  
-        <!-- </li> -->
-
-      </ul>
-    </div>
+  <nav class="navbar navbar-default">
+    <ul class="nav navbar-nav">
+      <li >
+        <a routerLink="movimientos">Movimientos</a>
+      </li>
+      <li >
+        <a  routerLink="operaciones">Transferencias</a>
+      </li>
+      <li >
+        <a  routerLink="productos">Productos Asociados</a>
+      </li>
+      <li >
+        <a  routerLink="detalles">Ajustes de la Cuenta</a>
+      </li>
+      <li >
+        <a  routerLink="detalles">Cambiar de Cuenta</a>
+      </li>
+    </ul>
   </nav>
-</div>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function(){
-    var cambiarCuentaBtn = document.getElementById('cambiar-cuenta');
-    var cambiarCuentaMenu = document.getElementById('cambiar-cuenta-menu');
-
-    cambiarCuentaBtn.addEventListener('click', function(event){
-      event.stopPropagation();
-      cambiarCuentaMenu.classList.toggle('show');
-    });
-
-    document.addEventListener('click', function(event){
-      if (!cambiarCuentaMenu.contains(event.target)){
-        cambiarCuentaMenu.classList.remove('show');
-      }
-    });
-    });
-</script>
