--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -18,9 +18,9 @@
 
         </div> 
 
-    <!-- </footer>
+    </footer>
 </div>
-<footer>
+<!--<footer>
     <mat-toolbar color="primary">
       <span>© {{ currentYear }} Mi Sitio Web</span>
       <span class="fill-remaining-space"></span>
