--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -33,16 +33,18 @@
       <div class="container">
         <section class="container text-white texto-resaltado">
           <div class="row">
-            <div class="col-md-6 mb-4">
+            <div class="col-md-6 mb-2">
               <h2>CONECTADO SIEMPRE CONTIGO</h2>
               <p>365 días del año siempre estaremos a tu disposición</p><br>
               <div>
-                <div class="porcentage text-start">0%</div>
-                <p class="text-center" id="number">de Interés</p>
+                <div class="text-white" style="font-size: 100px; font-weight: bold; font-family: Arial, sans-serif;">0% </div><span style="display: inline;"><h3> de intereses</h3></span>
+                <div class="col-md-12 mb-12 text-center">
+                  <p class="text-uppercase" style="font-size: 48px; font-weight: bold; margin: top 0px;"></p>
+                </div>
               </div>
             </div>
-            <div class="col-md-6 mb-4">
-              <img src="assets/prueba3.jpg " class="img-fluid rounded"  style="width: 300px; height: 200px; ">
+            <div class="col-md-6 mb-2">
+              <img src="assets/prueba3.jpg " class="img-fluid rounded"  style="width: 300px; height: 250px; ">
             </div>
           </div>
         </section>
