--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,9 +7,9 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h2>Contacto</h2>
-                    <h3>BANCAIN</h3>
+                    <h3>BANCSERTA</h3>
                     <p>Teléfono: 911106106</p>
-                    <p>Email: info@bancain.com</p>
+                    <p>Email: info@bancserta.com</p>
                     <p>Dirección: Calle de Fray Luis de León,11, 28012 Madrid</p>
                 </div>
                 <div class="footer-column">
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Bancain. Todos los derechos reservados.</p>
+                <p>&copy; 2023 Bancserta. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
